hphp/test/zend/good/ext-gd/bug39286.php
<?php
$img =imagecreatefromgd2part("foo.png",0, 100, 0, 100);
?>